--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-Flask==2.0.2
-Flask-SQLAlchemy==2.5.1
-gunicorn==20.1.0
+fastapi==0.68.1
+uvicorn==0.15.0
+sqlalchemy==1.4.23
+pydantic==1.8.2
+pytest==6.2.4
+httpx==0.18.2
